welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: warning: enclosing method finpos has result type Unit: return value discarded
             return b}
             ^SnakeBuggle:7: error: plm.universe.Direction does not take parameters
def avPS() {if (!estFaceMur()) {avance()} else {var d = getDirection();if (d == Direction.EST()) {gauche();avance();gauche()} else {droite();avance();droite()}}}
                                                                                             ^SnakeBuggle:10: error: value unary_! is not a member of Unit
override def run() {while (!finpos()) {avPS()}
                           ^